tests/build/cases/property/args_count_no_input.stderr
error: property functions must have at least 2 inputs: child: impl UiNode, arg0..
 --> cases/property/args_count_no_input.rs:4:18
  |
4 | pub fn no_inputs(child: impl UiNode) -> impl UiNode {
  |                  ^^^^^
